Fixed text overflow in RandomCard

--- a/src/client/styles/components/buttons.scss
+++ b/src/client/styles/components/buttons.scss
@@ -59,45 +59,3 @@
 }
 
 
-////
-///// Icon Buttons
-////
-
-.icon{
-    display: inline-block;
-    font-size: $size-icon;
-    color: grey;
-    border: none;
-    border-radius: 50%;
-    padding: $size-s;
-}
-
-.icon:hover{
-    cursor: pointer;
-    color: $color-icon;
-}
-
-.icon--red{
-    color: red;
-}
-
-// Like / Fave / Heart <3
-
-.bounce{
-    animation: bounce .5s;
-}
-
-@keyframes bounce {
-    0% {
-      transform: scale(1,1);
-    }
-    10%{
-        transform: scale(.8, .8);
-    }
-    40%{
-        transform: scale(1.3, 1.3);
-    }
-    100% {
-      transform: scale(1, 1);
-    }
-}
