--- a/src/client/styles/components/generator.scss
+++ b/src/client/styles/components/generator.scss
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     width: 75%;
-    height: 60%;
+    height: 70%;
     padding: $size-xl;
 }
 
@@ -23,7 +23,7 @@
     text-align: center;
     font-size: $size-l;
     font-weight: lighter;
-    padding: $size-m;
+    padding: $size-xs;
 }
 
 .smallCardHeader{
@@ -33,15 +33,56 @@
 
 #cardText{
     flex: 1;
+    overflow: auto;
 }
 
-.cardIcons{
+.cardIconWrapper{
     display: flex;
     justify-content: center;
 }
 
+////
+///// Icon Buttons
+////
 
+.cardIcon{
+    display: inline-block;
+    font-size: $size-icon;
+    color: grey;
+    border: none;
+    border-radius: 50%;
+    padding: $size-xs;
+}
 
+.cardIcon:hover{
+    cursor: pointer;
+    color: $color-icon;
+}
+
+.cardIcon--red{
+    color: red;
+}
+
+// Heart Bounce Animation
+
+.bounce{
+    animation: bounce .5s;
+}
+
+@keyframes bounce {
+    0% {
+      transform: scale(1,1);
+    }
+    10%{
+        transform: scale(.8, .8);
+    }
+    40%{
+        transform: scale(1.3, 1.3);
+    }
+    100% {
+      transform: scale(1, 1);
+    }
+}
 
 
 
